feature: add account commands

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     password: postgres
     pool:
       enabled: true
+      initial-size: 5
+      max-size: 10
+      max-idle-time: 10m
 
   flyway:
     baseline-on-migrate: true
