--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -3,10 +3,7 @@ global:
   evaluation_interval: 10s
 
 scrape_configs:
-  - job_name: 'otel-collector'
+  - job_name: 'account_microservice'
+    metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: [ 'otel-collector:8889' ]
-  - job_name: 'account-microservice'
-    metrics_path: '/metrics'
-    static_configs:
-      - targets: [ 'host.docker.internal:2112' ]
+      - targets: [ 'host.docker.internal:8080' ]
